--- a/Bludiste/Web/templates/WebowkaHra.html
+++ b/Bludiste/Web/templates/WebowkaHra.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Program Info</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='Style.css') }}">
     <script> //definuje  JAVASCRIPT funkci checkAccess
             //KONTROLA P5IHLASENI A REGISTRACE
 
@@ -45,11 +45,17 @@
         <nav>
             <div class="hamburger" onclick="toggleMenu()">☰</div>
             <ul>
-                <li><a href="hrat.html" onclick="checkAccess('play')">Hrát</a></li>
-                <li><a href="prihlaseni.html">Přihlášení</a></li>
-                <li><a href="registrace.html">Registrace</a></li>
-                <li><a href="o_hre.html">O hře</a></li>
-                <li><a href="scoreboard.html">Scoreboard</a></li>
+                <li><a href="{{ url_for('o_hre') }}">O hře</a></li>
+                <li><a href="{{ url_for('scoreboard') }}">Scoreboard</a></li>
+                {% if 'user_id' not in session %}
+                    <li><a href="{{ url_for('prihlaseni') }}">Přihlášení</a></li>
+                    <li><a href="{{ url_for('registrace') }}">Registrace</a></li>
+                {% else %}
+                    {% if session.get('is_admin') %}
+                        <li><a href="{{ url_for('admhraci') }}">Administrace hráčů</a></li>
+                    {% endif %}
+                    <li><a href="{{ url_for('odhlaseni') }}">Odhlásit se</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
