--- a/Bludiste/Web/templates/o_hre.html
+++ b/Bludiste/Web/templates/o_hre.html
@@ -30,7 +30,7 @@
     <h3>Funkce:</h3>
     <ul>
         <li>Přihlášení</li>
-        <li>Výběr z 10 levelů</li>
+        <li>Výběr ze 14 levelů</li>
         <li>Snaha se dostat do cíle za co nejkratší čas</li>
         <li>Vypsání výsledků</li>
     </ul>
