--- a/Bludiste/Web/templates/o_hre.html
+++ b/Bludiste/Web/templates/o_hre.html
@@ -9,7 +9,6 @@
     <header>
         <h1>Bludiště hra</h1>
         <nav>
-            <div class="hamburger" onclick="toggleMenu()">☰</div>
             <ul>
                 <li><a href="{{ url_for('o_hre') }}">O hře</a></li>
                 <li><a href="{{ url_for('scoreboard') }}">Scoreboard</a></li>
@@ -30,7 +29,7 @@
     <h3>Funkce:</h3>
     <ul>
         <li>Přihlášení</li>
-        <li>Výběr ze 14 levelů</li>
+        <li>Výběr z 10 levelů</li>
         <li>Snaha se dostat do cíle za co nejkratší čas</li>
         <li>Vypsání výsledků</li>
     </ul>
